force-app/main/default/objects/KimbleAgent__AgentSettings__c/KimbleAgent__AgentSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Kimble Sense Settings</label>
</CustomObject>