force-app/main/default/objects/KimbleAgent__AgentSettings__c/fields/KimbleAgent__IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__IsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>