force-app/main/default/objects/KimbleAgent__AgentSettings__c/fields/KimbleAgent__IsHubManaged__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__IsHubManaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hub Managed</label>
    <type>Checkbox</type>
</CustomField>