force-app/main/default/objects/KimbleAgent__AgentSettings__c/fields/KimbleAgent__IsTestMode__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__IsTestMode__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Test Mode</label>
    <type>Checkbox</type>
</CustomField>