force-app/main/default/objects/KimbleAgent__AgentSettings__c/fields/KimbleAgent__LicenseSyncLastRun__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__LicenseSyncLastRun__c</fullName>
    <label>License Sync LastRun</label>
    <type>Date</type>
</CustomField>