force-app/main/default/objects/KimbleAgent__AgentSettings__c/fields/KimbleAgent__MeasureBatchInterval__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__MeasureBatchInterval__c</fullName>
    <description>The interval (in minutes) between each run of the Measure Batch.</description>
    <inlineHelpText>The interval (in minutes) between each run of the Measure Batch.</inlineHelpText>
    <label>Measure Batch Interval</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>