force-app/main/default/objects/KimbleAgent__AgentSettings__c/fields/KimbleAgent__OrganisationMeasureSyncLastRun__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__OrganisationMeasureSyncLastRun__c</fullName>
    <label>Organisation Measure Sync LastRun</label>
    <type>Date</type>
</CustomField>