force-app/main/default/objects/KimbleAgent__AgentSettings__c/fields/KimbleAgent__RetentionPolicyLastRunDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__RetentionPolicyLastRunDate__c</fullName>
    <label>Retention Policy Last Run Date</label>
    <type>Date</type>
</CustomField>