force-app/main/default/objects/KimbleAgent__AgentSettings__c/fields/KimbleAgent__TestHubUrl__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__TestHubUrl__c</fullName>
    <label>Test Hub Url</label>
    <type>Url</type>
</CustomField>