force-app/main/default/objects/KimbleAgent__AgentSettings__c/fields/KimbleAgent__TestKey__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__TestKey__c</fullName>
    <label>Test Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>