force-app/main/default/objects/KimbleAgent__AgentSettings__c/fields/KimbleAgent__TestPassword__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__TestPassword__c</fullName>
    <label>Test Password</label>
    <length>80</length>
    <type>Text</type>
</CustomField>