force-app/main/default/objects/KimbleAgent__AgentSettings__c/fields/KimbleAgent__TestUsername__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__TestUsername__c</fullName>
    <label>Test Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>